cli/src/tests/error/if.sibs
IF $variable == "one" || $variable != "two" [ ] ELSE [ ];
IF $variable == "one" || && $variable != "two" [ ] ELSE [ ];
IF $variable == "one" ??? $variable != "two" [ ] ELSE [ ];
IF $variable == "one" $variable != "two" [ @os; ];
IF && $variable == "one" [ ] ELSE [ ];
IF $variable == "one [ ] ELSE [ ];
IF $variable == "one" [ @os; ] IF $variable == "one" || $variable != "two" [ ] ELSE [ ];
IF $variable == "one" [ @os; ] IF $variable == "one" || && $variable != "two" [ ] ELSE [ ];
IF $variable == "one" [ @os; ] IF $variable == "one" ??? $variable != "two" [ ] ELSE [ ];
IF $variable == "one" [ @os; ] IF $variable == "one" $variable != "two" [ @os; ];
IF $variable == "one" [ @os; ] IF && $variable == "one" [ ] ELSE [ ];
IF $variable == "one" [ @os; ] IF $variable == "one [ ] ELSE [ ];
IF $variable == "one" [ @os ];
IF;
IF ELSE;